git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@291 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_journals_form.html.haml
+++ b/app/views/accountancy/_journals_form.html.haml
@@ -1,4 +1,4 @@
-=formalize(:inner_form=>true) do |f|
+=formalize do |f|
   - f.error :journal
   - f.field :journal, :name
   - f.field :journal, :code
