git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@292 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -14,3 +14,4 @@
       %tr
         %td.actions{:colspan=>2}=link_to lc(:register), {:action=>:register}, {:class=>:show}
   .line
+=javascript_tag("$('user_name').focus();")
