git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@293 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/guide/about_us.html.haml
+++ b/app/views/guide/about_us.html.haml
@@ -1,3 +1,6 @@
 %h1= lc :title
+%p
+  =image_tag "logos.png"
 
-.link=link_to "www.ekylibre.org", "http://www.ekylibre.org"
+
+=link_to "www.ekylibre.org", "http://www.ekylibre.org"
