--- a/app/views/management/_price_lists_form.html.haml
+++ b/app/views/management/_price_lists_form.html.haml
@@ -1,6 +1,7 @@
 =formalize do |f|
+  - f.error 'price_list'
   - f.title :general
   - f.field :price_list, :name
-  - f.field :price_list, :currency_id, :choices=>@current_company.choices.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
-  - f.field :price_list, :activen :field=>:textarea
-  - f.field :price_list, :comment
+  - f.field :price_list, :currency_id, :choices=>@current_company.currencies.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
+  - f.field :price_list, :active
+  - f.field :price_list, :comment, :field=>:textarea
