git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@298 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_financialyears_form.html.haml
+++ b/app/views/accountancy/_financialyears_form.html.haml
@@ -3,4 +3,4 @@
   - f.field :financialyear, :code
   - f.field :financialyear, :started_on
   - f.field :financialyear, :stopped_on
-
+  - f.field :financialyear, :written_on
