--- a/app/views/accountancy/_accounts_find.html.haml
+++ b/app/views/accountancy/_accounts_find.html.haml
@@ -1,18 +1,19 @@
-= link_to_function "fermer" do |p| 
-  - p.replace_html 'account', '' 
-  - p['account_number'].focus()
-- if @find_accounts.size > 0
-  %table{:border=>1} 
-    %tr
-      %td.label=lc :account_number
-      %td.label=lc :account_name
-    - @find_accounts.each do |account|
+.window
+  = link_to_function l(:close) do |p| 
+    - p.replace_html 'account', '' 
+    - p['account_number'].focus()
+  - if @accounts.size > 0
+    %table.dyta 
       %tr
-        %td 
-          = link_to_function(account.number) do |p| 
-            - p['account_number'].value =  account.number  
-            - p['entry_debit'].focus()
-            - p.replace_html 'account', ''
-        %td=account.name
-- else
-  %p=lc :erreur
+        %th=lc :account_number
+        %th=lc :account_name
+      - @accounts.each do |account|
+        %tr{:class=>cycle('odd','even')}
+          %td
+            = link_to_function(account.number) do |p| 
+              - p['account_number'].value =  account.number  
+              - p['entry_currency_debit'].focus()
+              - p.replace_html 'account', ''
+          %td=account.name
+  - else
+    =lc :no_accounts
