--- a/app/views/accountancy/_journals_form.html.haml
+++ b/app/views/accountancy/_journals_form.html.haml
@@ -2,4 +2,5 @@
   - f.error :journal
   - f.field :journal, :name
   - f.field :journal, :code
+  - f.field :journal, :currency_id, :choices=>@current_company.currencies.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
   - f.field :journal, :nature, :field=>:radio, :choices=>Journal.natures.collect{|x| [lc(:natures, x),x.to_s]}
