--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -1,4 +1,7 @@
-#entlist
-  =lc(:title)
-#dytae
-  =dyta :entities
+%h1=lc(:title)
+
+.count=lc(:nb_entities,[@current_company.entities.size])
+
+=render :partial=>'entities_search'
+
+=dyta :entities
