git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@300 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_accounts_find.html.haml
+++ b/app/views/accountancy/_accounts_find.html.haml
@@ -16,4 +16,5 @@
               - p.replace_html 'account', ''
           %td=account.name
   - else
-    =lc :no_accounts
+    .error=lc :no_accounts
+    =link_to lc(:accounts_create), :action=>:accounts_create
