--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -7,9 +7,9 @@
 #params.action-list
   - form_tag(:action => :params_entries) do
     =formalize do |f|
-      - f.field lc(:select_financialyear), select_tag("financialyear_id", options_for_select(@financialyears.collect{|j| [j.code.to_s, j.id.to_s]}, session[:financialyear].to_s))
-      - f.field lc(:select_journal), select_tag("journal_id", options_for_select(@journals.collect{|j| [lc(:journal_x, [j.name,j.closed_on.to_s]), j.id]}, session[:journal].to_s))
-      - f.field lc(:number_records), text_field_tag("number", session[:records_number], :size=>2, :tabindex => 1)
+      - f.field lc(:select_financialyear), select_tag("financialyear_id", options_for_select(@financialyears.collect{|j| [j.code.to_s, j.id.to_s]}, session[:entries][:financialyear].to_s))
+      - f.field lc(:select_journal), select_tag("journal_id", options_for_select(@journals.collect{|j| [lc(:journal_x, [j.name,j.closed_on.to_s]), j.id]}, session[:entries][:journal].to_s))
+      - f.field lc(:number_records), text_field_tag("number", session[:entries][:records_number], :size=>2, :tabindex => 1)
     .actions
       =submit_tag l(:apply)
       - if @valid
