git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@302 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_statements.html.haml
+++ b/app/views/accountancy/_statements.html.haml
@@ -1,4 +1,7 @@
-%p Débit
-=@bank_account_statement.debit
-%p Crédit
-=@bank_account_statement.credit
+%table.dyta
+  %tr
+    %th=lc(:debit)
+    %th=lc(:credit)
+  %tr
+    %td=@bank_account_statement.debit
+    %td=@bank_account_statement.credit
