--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -24,13 +24,13 @@ tr.unbalanced-even td{background: #FFCCCC;}
 tr.unbalanced-odd td{background: #FF9999;}
 
 
-table.list_entries tr.even td{:background: #E3F4FF;}
-table.list_entries tr.odd td{:background: #E3F4FF;}
+table.listentries tr.even td{:background: #E3F4FF;}
+table.listentries tr.odd td{:background: #E3F4FF;}
 
-tr.pointable.even td{background:#CCF5CC;}
-tr.pointable.odd td{background:#99EB99;}
-tr.unpointable.even td{background: #FFCCCC;}
-tr.unpointable.odd td{background: #FF9999;}
+tr.pointable-even td{background:#CCF5CC;}
+tr.pointable-odd td{background:#99EB99;}
+tr.unpointable-even td{background: #FFCCCC;}
+tr.unpointable-odd td{background: #FF9999;}
 
 
 /*#lines { height: 300px; overflow: auto; }*/
