--- a/app/views/accountancy/_bank_accounts_form.html.haml
+++ b/app/views/accountancy/_bank_accounts_form.html.haml
@@ -7,9 +7,10 @@
   - f.field :bank_account, :number    
   - f.field :bank_account, :key  
   - f.title :accountancy
-  - f.field :bank_account, :account_id, :choices => @current_company.accounts.find(:all).collect {|b| [b.number, b.id]}
-  - f.field :bank_account, :currency_id
-  - f.field :bank_account, :journal_id
+  - f.field :bank_account, :account_id,  :choices => @current_company.accounts.find(:all).collect {|b| [b.number, b.id]}, :new => {:action => :accounts_create}
+  - f.field :bank_account, :currency_id, :choices => @current_company.currencies.find(:all).collect {|c| [c.name, c.id]}
+  - f.field :bank_account, :journal_id,  :choices => @current_company.journals.find(:all).collect {|j| [j.name, j.id]}, :new => {:action => :journals_create}
+ 
 #currency
 =observe_field "bank_account_currency_id", :frequency => 0.25, :function =>"if ( (document.getElementById('bank_account_currency_id').value).indexOf('*','g') > -1 ) {"+remote_function(:update => 'currency', :url => { :action => 'currencies_find'}, :with => "'currency=' + escape(value)")+"}"
 #journal
