git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@304 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_contact_create.html.haml
+++ b/app/views/relations/_entities_contact_create.html.haml
@@ -1,11 +1,16 @@
-=formalize(:url=>{:action=>:entities_contact_create}) do |f|
-  -f.error :contact
-  -f.title lc(:title)
-  -f.field :contact, :active
-  -f.field :contact, :default
-  -f.field :contact, :closed_on
-  -f.field :contact, :line_2
-  -f.field :contact, :line_3
-  -f.field :contact, :line_4_number
-  -f.field :contact, :fax
-  -f.field :contact, :mobile 
+-form_tag do
+  =formalize(:url=>{:action=>:entities_contacts_create}) do |f|
+    -f.error :contact
+    -f.title lc(:title)
+    -f.field :contact, :active
+    -f.field :contact, :default
+    -f.field :contact, :closed_on
+    -f.field :contact, :line_2
+    -f.field :contact, :line_3
+    -f.field :contact, :line_4_number
+    -f.field :contact, :phone
+    -f.field :contact, :fax
+    -f.field :contact, :mobile 
+
+     
+        
