--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -1,8 +1,10 @@
-=formalize(:inner_form=>true) do |f|
+=formalize do |f|
   -f.error :entity
   -f.title lc(:title)
+  -f.field :entity, :first_name
   -f.field :entity, :name
   -f.field :entity, :code
   -f.field :entity, :full_name
   -f.field :entity, :language_id
   -f.field :entity, :nature_id
+  -f.field :entity, :website
