--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -1,9 +1,13 @@
+%h1=lc(:title,[@name])
+=evalue @entity, :first_name
 =evalue @entity, :name
 =evalue @entity, :code
 =evalue @entity, :full_name
 =evalue @entity, :active
+=evalue @entity, :website
 =link_to lc(:back) , :action=>:entities
-=dyta :contacts 
-=link_to_remote lc(:new_contact) , :url=>{:action=>"entities_contact_create"} 
-#rails
+=dyta :contacts
+=h session.data.inspect
+   
+
 
