git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@307 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_statements.html.haml
+++ b/app/views/accountancy/_statements.html.haml
@@ -1,7 +1,1 @@
-%table.dyta
-  %tr
-    %th=lc(:debit)
-    %th=lc(:credit)
-  %tr
-    %td=@bank_account_statement.debit
-    %td=@bank_account_statement.credit
+=javascript_tag("$('total_debit').innerHTML='"+@bank_account_statement.debit.to_s+"';$('total_credit').innerHTML='"+@bank_account_statement.credit.to_s+"';")
