--- a/app/views/accountancy/_bank_accounts_form.html.haml
+++ b/app/views/accountancy/_bank_accounts_form.html.haml
@@ -2,10 +2,7 @@
   - f.error :bank_account
   - f.title :rib
   - f.field :bank_account, :name
-  - f.field :bank_account, :bank_code
-  - f.field :bank_account, :agency_code
-  - f.field :bank_account, :number    
-  - f.field :bank_account, :key  
+  - f.field :bank_account, :iban  
   - f.title :accountancy
   - f.field :bank_account, :account_id,  :choices => @current_company.accounts.find(:all).collect {|b| [b.number, b.id]}, :new => {:action => :accounts_create}
   - f.field :bank_account, :currency_id, :choices => @current_company.currencies.find(:all).collect {|c| [c.name, c.id]}
