git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@308 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_contacts_form.html.haml
+++ b/app/views/relations/_entities_contacts_form.html.haml
@@ -7,7 +7,14 @@
   -f.field :contact, :line_2
   -f.field :contact, :line_3
   -f.field :contact, :line_4_number
+  -f.field :contact, :line_4_street
+  -f.field :contact, :line_5
+  -f.field :contact, :line_6_code
+  -f.field :contact, :line_6_city
   -f.field :contact, :phone
   -f.field :contact, :fax
   -f.field :contact, :mobile
+  -f.field :contact, :email
+  -f.field :contact, :latitude
+  -f.field :contact, :longitude
 
