git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@316 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -9,7 +9,8 @@
 =evalue @entity, :website
 =link_to lc(:back) , :action=>:entities
 %br
-=link_to lc(:new_contact) , :action=>:entities_contacts_create , :id=>@id
+.contact
+  =link_to lc(:new_contact) , :action=>:entities_contacts_create , :id=>@id
 =dyta :contacts
 
    
