--- a/app/views/accountancy/statements_point.html.haml
+++ b/app/views/accountancy/statements_point.html.haml
@@ -1,40 +1,26 @@
-<!-- %h1=lc(:title)  -->
-<!-- %table.dyta -->
-<!--   %tr -->
-<!--     %th=lc (:entry_name) -->
-<!--     %th=lc (:entry_debit) -->
-<!--     %th=lc (:entry_credit) -->
-<!--   - @entries.each do |entry| -->
-<!--     - attr = cycle("even", "odd")+"-" -->
-<!--     %tr{ :class => attr+((entry.statement_id.eql? session[:statement].to_i) ? "pointable" : "unpointable"), :id=> 'e'+entry.id.to_s } -->
-<!--       %td=entry.name -->
-<!--       %td.fixnum=entry.debit -->
-<!--       %td.fixnum=entry.credit  -->
-<!--   %tr -->
-<!--     %td=lc(:total, [@bank_account.name]) -->
-<!--     %td#total_debit=0 -->
-<!--     %td#total_credit=0 -->
-<!-- #total -->
-<!--   /=render :partial=>'statements' -->
-<!--   =link_to lc (:validate), :action => :statements, :id => @bank_account.id -->
-
-
-
-
 %h1=lc(:title)
 %table.dyta
   %tr
+    %th=lc (:statement_number)
+    %th=lc (:started_on)
+    %th=lc (:stopped_on)
     %th=lc (:entry_name)
     %th=lc (:entry_debit)
     %th=lc (:entry_credit)
   - @entries.each do |entry|
     - attr = cycle("even", "odd")+"-"
-    %tr{ :class => attr+((entry.statement_id.eql? session[:statement].to_i) ? "pointable" : "unpointable"), :id=> 'e'+entry.id.to_s, :onclick => remote_function(:after => "var element=$('e"+entry.id.to_s+"'); element.removeClassName('"+attr+"unpointable'); element.addClassName('"+attr+"pointable');", :url => { :action => 'statements_point', :id=>entry.id} ) }
+    %tr{ :class => attr+((entry.statement_id.eql? session[:statement].to_i) ? "pointable" : "unpointable"), :id=> 'e'+entry.id.to_s, :onclick => remote_function(:after => "var element=$('e"+entry.id.to_s+"'); if (element.hasClassName('"+attr+"pointable')) { element.removeClassName('"+attr+"pointable'); element.addClassName('"+attr+"unpointable'); } else { element.removeClassName('"+attr+"unpointable'); element.addClassName('"+attr+"pointable'); }",:url => { :action => 'statements_point', :id => entry.id}) }
+      %td=@bank_account_statement.number
+      %td=@bank_account_statement.started_on
+      %td=@bank_account_statement.stopped_on
       %td=entry.name
       %td.fixnum=entry.debit
       %td.fixnum=entry.credit
   %tr
     %td=lc(:total, [@bank_account.name])
+    %td
+    %td
+    %td
     %td#total_debit=0
     %td#total_credit=0
 =link_to lc (:validate), :action => :statements, :id => @bank_account.id
