--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
     %link{:rel=>"icon", :type=>"image/png", :href=>"/images/favicon.png"}
     = title_tag
-    = stylesheet_link_tag :defaults
+    = stylesheet_link_tag 'application'
     = javascript_include_tag :defaults
   %body{:id=>:body, :orient=>:vertical, :onload=>'resize();', :onresize=>'resize();'}
     = top_tag
