git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@325 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/register.html.haml
+++ b/app/views/authentication/register.html.haml
@@ -3,7 +3,7 @@
 .formalize
   - form_tag do
     .fields
-      =formalize(:multipart=>false) do |f|
+      =formalize do |f|
         - f.error 'company', 'user'
         - f.title :my_company
         - f.field :company, :name, {:example=>lc(:company_name_example)}
