--- a/app/views/shared/form_create.html.haml
+++ b/app/views/shared/form_create.html.haml
@@ -1,9 +1,9 @@
-%h1=l self.controller.controller_name.to_sym, action_name.to_sym, :title
+%h1=t "#{self.controller.controller_name.to_s}.#{action_name.to_s}.title"
 - unless flash[:message].blank?
   .message=flash[:message]
 - form_tag do
   =render :partial=>@partial
   .actions
-    =submit_tag(l(@options[:submit]||:create))
-    =link_to(l(@options[:cancel]||:cancel),:back)
+    =submit_tag(t (@options[:submit]||:create).to_s)
+    =link_to(t((@options[:cancel]||:cancel).to_s), :back)
 
