git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@334 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/shared/_menu_index.html.haml
+++ b/app/views/shared/_menu_index.html.haml
@@ -1,6 +1,6 @@
 - for list in menu[:list]
   %div{:class=>'action-list '+list[:class].to_s}
-    %h2=t(self.controller.controller_name+'.index.'+list[:name].to_s)
+    %h2=t("app.#{self.controller.controller_name}.index.#{list[:name].to_s}")
     %ul
       - for action in list[:list]
-        %li=link_to t(self.controller.controller_name+'.index.'+action[:name].to_s), action[:url]||{:action=>action[:name]}
+        %li=link_to t("app.#{self.controller.controller_name}.index.#{action[:name].to_s}"), action[:url]||{:action=>action[:name]}
